--- a/albano/public/css/style.css
+++ b/albano/public/css/style.css
@@ -8,6 +8,10 @@ body {
    background-color: #141516;
 }
 
+.profile {
+    border-color: #8257e5 !important;
+}
+
 
 .navbar {
     display: flex;
@@ -22,12 +26,17 @@ body {
     height: 22em;
 }
 
+.skill {
+    height: 70% !important;
+    width: 50% !important;
+}
+
 .carousel-inner {
     z-index: -1;
 }
 
 #gradient {
-    background-image: linear-gradient(to bottom, #32253a,#1b141f, #151416 );
+    background-image: linear-gradient(to bottom, #1c1521, #151416 );
 }
 
 #divider {
@@ -41,12 +50,14 @@ body {
     
 }
 
-#screen {
+#blur {
     
+    filter: blur(1px);
+  -webkit-filter: blur(1px);
 }
 
 
-.title {
+.title-orange {
     font-weight: 1000;
     background-repeat: repeat;
     background-size: 100%;
@@ -57,7 +68,7 @@ body {
         269.94deg,#ffc107 -7.44%,#e67b09 99.94%);
 }
 
-.title-2 {
+.title {
     font-weight: 1000;
     background-repeat: repeat;
     background-size: 100%;
@@ -71,4 +82,39 @@ body {
 .text {
     color: white;
 }
+
+
+.carousel-cell {
+    width: 100%;
+    height: 200px;
+    margin-right: 10px;
+    background: #8C8;
+    border-radius: 5px;
+    counter-increment: carousel-cell;
+  }
+  
+  /* cell number */
+  .carousel-cell:before {
+    display: block;
+    text-align: center;
+    content: counter(carousel-cell);
+    line-height: 200px;
+    font-size: 80px;
+    color: white;
+  }
+  
+  .carousel-nav .carousel-cell {
+    height: 80px;
+    width: 100px;
+  }
+  
+  .carousel-nav .carousel-cell:before {
+    font-size: 50px;
+    line-height: 80px;
+  }
+  
+  .carousel-nav .carousel-cell.is-nav-selected {
+    background: #ED2;
+  }
+  
 
