--- a/albano/public/css/style.css
+++ b/albano/public/css/style.css
@@ -22,9 +22,20 @@ body {
    
 }
 
-.carousel-img {
-    height: 22em;
-}
+.parallax {
+    /* The image used */
+    background-image: url("../img/cover.jpg");
+  
+    /* Set a specific height */
+    min-height: 23em;
+    width: 100%;
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
 .skill {
     height: 70% !important;
@@ -37,6 +48,10 @@ body {
 
 #gradient {
     background-image: linear-gradient(to bottom, #1c1521, #151416 );
+}
+
+#inverse-gradient {
+    background-image: linear-gradient(to bottom, #151416, #1c1521);
 }
 
 #divider {
@@ -84,37 +99,10 @@ body {
 }
 
 
-.carousel-cell {
-    width: 100%;
-    height: 200px;
-    margin-right: 10px;
-    background: #8C8;
-    border-radius: 5px;
-    counter-increment: carousel-cell;
-  }
-  
-  /* cell number */
-  .carousel-cell:before {
-    display: block;
-    text-align: center;
-    content: counter(carousel-cell);
-    line-height: 200px;
-    font-size: 80px;
-    color: white;
-  }
-  
-  .carousel-nav .carousel-cell {
-    height: 80px;
-    width: 100px;
-  }
-  
-  .carousel-nav .carousel-cell:before {
-    font-size: 50px;
-    line-height: 80px;
-  }
-  
-  .carousel-nav .carousel-cell.is-nav-selected {
-    background: #ED2;
-  }
-  
+.footer {
+    margin-top: 10em;
+}
+
+
+
 
