--- a/albano/public/css/style.css
+++ b/albano/public/css/style.css
@@ -8,6 +8,16 @@ body {
    background-color: #141516;
 }
 
+.nav-link {
+    border-bottom: 2px solid #8257e500;
+}
+
+.nav-link:hover {
+    cursor: pointer;
+    border-bottom: 2px inset #8257e5;
+    transition: 1s;
+}
+
 .profile {
     border-color: #8257e5 !important;
 }
@@ -58,6 +68,7 @@ body {
     height: 5em;
     z-index: -2;
     color: rgba(0, 0, 0, 0);
+    margin: 0em !important;
 }
 
 #screen {
@@ -157,14 +168,44 @@ body {
     opacity: .5;
     height: 100%;
     width: 100%;
-    
-  
+     
+}
+
+.form-label {
+    color: #e1e1e1;
+}
+
+.input {
+    color: #f8f9fa;
+    background-color: rgba(28, 26, 26, 0.857) !important;
+    border: 1px solid #8257e5 !important;
+}
+
+.input:focus {
+    color: #f8f9fa;
+    border-color:#8257e5;
+    outline: none !important;
+    border:1px solid #8257e5;
+    box-shadow: 0 0 10px #8257e5;
+}
+
+.btn-send {
+    background-color:  #8257e5 !important;
+    color: #f8f9fa;
+}
+
+.btn-send:hover {
+    background-color:  #6640c0 !important;
+    color: #fafafa;
 }
 
 
 
+
+
+
 .footer {
-    margin-top: 10em;
+    margin-top: 1em;
 }
 
 
