contact controller and email init

--- a/albano/public/css/style.css
+++ b/albano/public/css/style.css
@@ -199,6 +199,18 @@ body {
     color: #fafafa;
 }
 
+.progress{
+    position: relative;
+}
+
+.progress .progress-bar{
+    margin: auto;
+    position: absolute;
+    height: 20px;
+    animation: progress-animation 6s infinite;
+ }
+ 
+
 
 
 
